# hdb-resale-prediction

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cicd.yml  cicd_app_model.yml  cicd_app_model_integration.yml  cicd_data_processing.yml  cicd_data_validation.yml  cicd_lambdas.yml  cicd_retraining.yml  deploy_lambdas.yml  hyperparam_search.yml  test_oidc.yml  train_model.yml
app/: model.py
app/data/: sample.json
app/fastapi/: Dockerfile  main.py  requirements.txt
app/fastapi_app/: Dockerfile  main.py  requirements.txt
app/streamlit/: Dockerfile  main.py  requirements.txt
docs/: Architecture Overview.pptx  mkdocs.yml  ~$Architecture Overview.pptx
docs/docs/: index.md
mlartifacts/195963715004302815/0153aa29595b483c9cb66ef28ba215a4/artifacts/: cv_results.csv
mlartifacts/195963715004302815/0d93cbe6057d4ff1a8e5efa627361ae4/artifacts/: cv_results.csv  estimator.html
mlartifacts/195963715004302815/183b96c5208d437086e1e0d74634c24a/artifacts/: cv_results.csv
mlartifacts/195963715004302815/2c05708bd5e64a6691a84618b39a6a8b/artifacts/: cv_results.csv
modelling/: data_processing.py  expt_models.py  get_data.py  get_s3_data.py  hyperparam_search.py  output_best_model.py  test_download.py  train.py
modelling/archive/: data_processing_polars.py
modelling/data_processing/: data_processing.py
modelling/data_pulling/: get_s3_data.py
modelling/data_validation/: data_validation.py
modelling/hyperparam_search/: Dockerfile  hyperparam_search.py  requirements.txt
modelling/retrain_best_model/: Dockerfile  requirements.txt  retrain_best_model.py
models/: champion_model.pkl  rainfall_lstm_baseline.pth
notebooks/: Data Cleaning.ipynb  Data Exploration.ipynb  Modelling.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/909521353045552965/: meta.yaml
src/: app.py  data_processing.py  inference.py
tests/: test_app.py  test_data_processing.py  test_data_pulling.py  test_model.py
tmp/: champion_model.joblib
(+185 files in other folders)
