[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bike_snowflake"
version = "0.0.1"
description = "Prediction modelling by a snowflake for snowflakes"
authors = [
  { name = "Zi Yu (Nathan)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "torch",
    "polars", 
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["bike_snowflake"]
include = ["pyproject.toml", "bike_snowflake/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bike_snowflake"]
force-sort-within-sections = true

