[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hdb-resale-prediction"
version = "0.0.1"
description = "HDB Resale Flat Price Prediction"
authors = [
  { name = "Zi Yu (Nathan)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "torch",
    "polars", 
    "mlflow",
    "seaborn",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["hdb_resale_prediction"]
include = ["pyproject.toml", "hdb-resale-prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hdb-resale-prediction"]
force-sort-within-sections = true

